--- a/index.html
+++ b/index.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Automação WhatsApp - 2 Vagas</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
-    <style>
-      body { font-family: 'Inter', sans-serif; }
-      .glow { text-shadow: 0 0 30px #00ff6a; }
-      .float-btn { transition: all 0.3s; }
-      .float-btn:hover { transform: scale(1.1); }
-    </style>
-  </head>
-  <body class="bg-black text-white">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Automação WhatsApp - 2 Vagas</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Inter', sans-serif; background: black; color: white; }
+    .glow { text-shadow: 0 0 30px #00ff6a; }
+    .pulse { animation: pulse 2s infinite; }
+    @keyframes pulse { 0%, 100% { opacity: 1; } 50% { opacity: 0.7; } }
+    .float-btn {
+      transition: all 0.3s ease;
+      box-shadow: 0 10px 30px rgba(37, 211, 102, 0.6);
+    }
+    .float-btn:hover { transform: scale(1.12); }
+  </style>
+</head>
+<body class="min-h-screen flex flex-col">
+
+  <!-- Botão Flutuante WhatsApp -->
+  <a href="https://wa.me/5562991117329" target="_blank"
+     class="fixed bottom-6 right-6 z-50 bg-[#25D366] text-white font-bold text-xl px-10 py-6 rounded-full float-btn glow">
+    WhatsApp
+  </a>
+
+  <!-- Hero -->
+  <section class="flex-1 flex flex-col items-center justify-center text-center px-6 py-20 bg-gradient-to-b from-black to-[#0a0a0a]">
+    <h1 class="text-5xl md:text-7xl font-black mb-6 glow text-[#00ff6a] leading-tight">
+      Automatize seu atendimento no WhatsApp<br>e venda 24h no piloto automático
+    </h1>
+    <p class="text-xl md:text-3xl mb-10 text-gray-300 max-w-4xl">
+      Respostas 24h • Recuperação de carrinho • Agendamento • Cobrança Pix automática<br>
+      Tudo funcionando enquanto você dorme
+    </p>
+
+    <div class="text-4xl md:text-6xl font-black text-red-500 mb-12 pulse glow">
+      APENAS 2 VAGAS RESTANTES ESTA SEMANA
+    </div>
+
+    <a href="https://wa.me/5562991117329" target="_blank"
+       class="bg-[#25D366] hover:bg-[#20b357] text-white text-2xl md:text-4xl font-bold px-16 py-8 rounded-full shadow-2xl hover:scale-110 transition-all duration-300">
+      QUERO UMA DAS 2 VAGAS AGORA
+    </a>
+  </section>
+
+  <!-- Vídeo com SOM ligado -->
+  <section class="py-16 bg-black">
+    <div class="max-w-5xl mx-auto px-6">
+      <iframe class="w-full aspect-video rounded-2xl shadow-2xl border-4 border-[#00ff6a]/30"
+              src="https://www.youtube.com/embed/fxby-3oz-qY?autoplay=1&rel=0&modestbranding=1"
+              title="Vídeo de apresentação"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+      </iframe>
+    </div>
+  </section>
+
+</body>
 </html>
