--- a/index.html
+++ b/index.html
@@ -26,29 +26,22 @@
     WhatsApp
   </a>
 
-  <!-- Hero -->
-  <section class="flex-1 flex flex-col items-center justify-center text-center px-6 py-20 bg-gradient-to-b from-black to-[#0a0a0a]">
-    <h1 class="text-5xl md:text-7xl font-black mb-6 glow text-[#00ff6a] leading-tight">
+  <!-- Hero + Vídeo + Escassez -->
+  <section class="flex-1 flex flex-col items-center justify-center text-center px-6 py-10 bg-gradient-to-b from-black to-[#0a0a0a]">
+
+    <!-- Título -->
+    <h1 class="text-5xl md:text-7xl font-black mb-8 glow text-[#00ff6a] leading-tight">
       Automatize seu atendimento no WhatsApp<br>e venda 24h no piloto automático
     </h1>
+
+    <!-- Subtítulo -->
     <p class="text-xl md:text-3xl mb-10 text-gray-300 max-w-4xl">
       Respostas 24h • Recuperação de carrinho • Agendamento • Cobrança Pix automática<br>
       Tudo funcionando enquanto você dorme
     </p>
 
-    <div class="text-4xl md:text-6xl font-black text-red-500 mb-12 pulse glow">
-      APENAS 2 VAGAS RESTANTES ESTA SEMANA
-    </div>
-
-    <a href="https://wa.me/5562991117329" target="_blank"
-       class="bg-[#25D366] hover:bg-[#20b357] text-white text-2xl md:text-4xl font-bold px-16 py-8 rounded-full shadow-2xl hover:scale-110 transition-all duration-300">
-      QUERO UMA DAS 2 VAGAS AGORA
-    </a>
-  </section>
-
-  <!-- Vídeo com SOM ligado -->
-  <section class="py-16 bg-black">
-    <div class="max-w-5xl mx-auto px-6">
+    <!-- Vídeo (agora vem antes da escassez) -->
+    <div class="w-full max-w-5xl mx-auto mb-12">
       <iframe class="w-full aspect-video rounded-2xl shadow-2xl border-4 border-[#00ff6a]/30"
               src="https://www.youtube.com/embed/fxby-3oz-qY?autoplay=1&rel=0&modestbranding=1"
               title="Vídeo de apresentação"
@@ -56,6 +49,17 @@
               allowfullscreen>
       </iframe>
     </div>
+
+    <!-- Escassez gigante -->
+    <div class="text-4xl md:text-6xl font-black text-red-500 mb-10 pulse glow">
+      APENAS 2 VAGAS RESTANTES ESTA SEMANA
+    </div>
+
+    <!-- Botão CTA -->
+    <a href="https://wa.me/5562991117329" target="_blank"
+       class="bg-[#25D366] hover:bg-[#20b357] text-white text-2xl md:text-4xl font-bold px-16 py-8 rounded-full shadow-2xl hover:scale-110 transition-all duration-300">
+      QUERO UMA DAS 2 VAGAS AGORA
+    </a>
   </section>
 
 </body>
