--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
               allowfullscreen></iframe>
     </div>
 
-    <!-- Escassez -->
+    <!-- Escassez alterada -->
     <div class="text-4xl md:text-6xl font-black text-red-500 mb-10 pulse glow">
-      APENAS 2 VAGAS RESTANTES ESTA SEMANA
+      APENAS 2 VAGAS RESTANTES ESTE MÊS
     </div>
 
     <!-- Botão CTA -->
@@ -54,37 +54,19 @@
     </a>
   </section>
 
-  <!-- 5 MOTIVOS - Depois do botão final -->
+  <!-- 5 Motivos -->
   <section class="py-20 px-6 bg-black">
     <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-4xl md:text-5xl font-black mb-16 glow text-[#00ff6a]">
         Por que restaurantes estão trocando iFood/Rappi por automação no WhatsApp?
       </h2>
-
       <div class="grid md:grid-cols-1 gap-10 text-left max-w-3xl mx-auto text-xl md:text-2xl">
-        <div class="flex items-start gap-4">
-          <span class="check">✓</span>
-          <p><strong>Zero taxa por pedido</strong> – Você fica com 100% do lucro (iFood fica com até 30%)</p>
-        </div>
-        <div class="flex items-start gap-4">
-          <span class="check">✓</span>
-          <p><strong>Cliente pede direto no seu WhatsApp</strong> – Não precisa mais do app do iFood</p>
-        </div>
-        <div class="flex items-start gap-4">
-          <span class="check">✓</span>
-          <p><strong>Robô responde 24h</strong> – Mesmo de madrugada ou domingo o cliente é atendido na hora</p>
-        </div>
-        <div class="flex items-start gap-4">
-          <span class="check">✓</span>
-          <p><strong>Recupera carrinho abandonado</strong> – Cliente que começou o pedido e sumiu recebe lembrete automático</p>
-        </div>
-        <div class="flex items-start gap-4">
-          <span class="check">✓</span>
-          <p><strong>Pagamento por Pix na hora</strong> – Dinheiro cai direto na sua conta, sem espera de 30 dias</p>
-        </div>
+        <div class="flex items-start gap-4"><span class="check">✓</span><p><strong>Zero taxa por pedido</strong> – Você fica com 100% do lucro (iFood fica com até 30%)</p></div>
+        <div class="flex items-start gap-4"><span class="check">✓</span><p><strong>Cliente pede direto no seu WhatsApp</strong> – Não precisa mais do app do iFood</p></div>
+        <div class="flex items-start gap-4"><span class="check">✓</span><p><strong>Robô responde 24h</strong> – Mesmo de madrugada ou domingo o cliente é atendido na hora</p></div>
+        <div class="flex items-start gap-4"><span class="check">✓</span><p><strong>Recupera carrinho abandonado</strong> – Cliente que começou o pedido e sumiu recebe lembrete automático</p></div>
+        <div class="flex items-start gap-4"><span class="check">✓</span><p><strong>Pagamento por Pix na hora</strong> – Dinheiro cai direto na sua conta, sem espera de 30 dias</p></div>
       </div>
-
-      <!-- Botão final extra (opcional) -->
       <div class="mt-16">
         <a href="https://wa.me/5562991117329" target="_blank"
            class="inline-block bg-[#25D366] hover:bg-[#20b357] text-white text-2xl md:text-3xl font-bold px-16 py-8 rounded-full shadow-2xl hover:scale-110 transition-all">
